config with viper, linux/mac support

--- a/link-monitor.conf
+++ b/link-monitor.conf
@@ -1,10 +1,17 @@
+logging:
+    level: debug
+    file: /var/log/link-monitor
+
+cache_directory: /var/cache/link-monitor
 
 kit_id: 181
 
 links:
-    - wwan0-0
-    - wwan1-0
-    - wwan2-0
+    - en0
 
 broker:
     host: 127.0.0.1
+    port: 5672
+    routing_key: <kit_id>.network.usage
+    publish_interval: 30
+
