better data type breakdown

--- a/link-monitor.conf
+++ b/link-monitor.conf
@@ -10,7 +10,11 @@ links:
     - en0
 
 broker:
-    host: 127.0.0.1
+    host: 192.168.10.3
     port: 5672
-    routing_key: <kit_id>.network.usage
+    username: test
+    password: test
+    exchange_name: amq.topic
+    exchange_type: topic
+    routing_key: <kit_id>.vmig.network.usage
     publish_interval: 30
